# alest-rwa-mvp

./: .gitignore  Anchor.toml  CLAUDE.md  README.md  package.json
.claude/: settings.json
.claude/hooks/: test-after-program-change.md
.claude/skills/deployment/: SKILL.md
.claude/skills/frontend/: SKILL.md
.claude/skills/smart-contract/: SKILL.md
.claude/skills/testing/: SKILL.md
app/: .env.example  CLAUDE.md  fleet-demo.html  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
app/src/: App.tsx  index.css
app/src/components/: AssetCard.tsx  InvestForm.tsx  Portfolio.tsx  WalletConnect.tsx
app/src/hooks/: useAsset.ts  useInvest.ts  useRevenue.ts
app/src/utils/: anchor.ts  constants.ts  format.ts  idl.ts
docs/: architecture.md
docs/decisions/: 001-why-solana.md  002-token-economics.md
docs/runbooks/: deploy-devnet.md
programs/rwa-token/: CLAUDE.md  Cargo.toml
programs/rwa-token/src/: lib.rs
scripts/: initialize-asset.ts
tests/: rwa-token.ts
