[package]
name = "rwa-token"
version = "0.1.0"
description = "Real-World Asset Tokenization on Solana — alest.io"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rwa_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
