[package]
name = "rwa-token"
version = "0.1.0"
description = "Real-World Asset Tokenization on Solana — alest.io"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rwa_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "1.0.0-rc.5", features = ["init-if-needed"] }
anchor-spl = { version = "1.0.0-rc.5", features = ["token", "associated_token"] }
